Add Typesense (ansible-role-typesense) to files in templates/
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -607,6 +607,10 @@
   version: v1.4.7-0
   name: tsdproxy
   activation_prefix: tsdproxy_
+- src: git+https://github.com/mother-of-all-self-hosting/ansible-role-typesense.git
+  version: v29.0-0
+  name: typesense
+  activation_prefix: typesense_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-uptime_kuma.git
   version: v1.23.16-8
   name: uptime_kuma
