Add MediaWiki (ansible-role-mediawiki) to files in templates/
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -401,6 +401,10 @@
     - role: galaxy/matterbridge
     # /role-specific:matterbridge
 
+    # role-specific:mediawiki
+    - role: galaxy/mediawiki
+    # /role-specific:mediawiki
+
     # role-specific:minecraft
     - role: galaxy/minecraft
     # /role-specific:minecraft
