--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -28,6 +28,10 @@
   version: v20250915-0
   name: asciinema_server
   activation_prefix: asciinema_server_
+- src: git+https://codeberg.org/acioustick/ansible-role-audiobookshelf.git
+  version: v2.29.0-0
+  name: audiobookshelf
+  activation_prefix: audiobookshelf_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-authelia.git
   version: v4.37.5-9
   name: authelia
