Add Meilisearch (ansible-role-meilisearch) to files in templates/
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -340,6 +340,10 @@
   version: v1.43.3-0
   name: mediawiki
   activation_prefix: mediawiki_
+- src: git+https://github.com/mother-of-all-self-hosting/ansible-role-meilisearch.git
+  version: v1.22.3-0
+  name: meilisearch
+  activation_prefix: meilisearch_
 - src: git+https://github.com/XHawk87/ansible-role-minecraft.git
   version: v2025.4.2-0
   name: minecraft
