Update configurations for FreshRSS
Replace the role with the MASH's maintained fork:
- MySQL (MariaDB) support
- Printing database credentials function

Reuse https://github.com/mother-of-all-self-hosting/ansible-role-freshrss/blob/470cbf31a5da3208e41cd731dc62880d72a6ba3c/docs/configuring-freshrss.md.

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -204,8 +204,8 @@
   version: v1.17.131-1
   name: freescout
   activation_prefix: freescout_
-- src: git+https://github.com/kinduff/ansible-docker-freshrss.git
-  version: v2.7.0
+- src: git+https://github.com/mother-of-all-self-hosting/ansible-role-freshrss.git
+  version: v1.27.1-0
   name: freshrss
   activation_prefix: freshrss_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-funkwhale.git
