--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -56,6 +56,10 @@
   version: v1.4.1-1.9.14-2
   name: backup_borg
   activation_prefix: backup_borg_
+- src: git+https://codeberg.org/acioustick/ansible-role-barassistant.git
+  version: v5.8.1-0
+  name: barassistant
+  activation_prefix: barassistant_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-calibre-web.git
   version: v0.6.25-2
   name: calibre_web
