--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -145,6 +145,10 @@
     - role: galaxy/backup_borg
     # /role-specific:backup_borg
 
+    # role-specific:barassistant
+    - role: galaxy/barassistant
+    # /role-specific:barassistant
+
     # role-specific:calibre_web
     - role: galaxy/calibre_web
     # /role-specific:calibre_web
