Add Atuin server (ansible-role-atuin) to files in templates/
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -125,6 +125,10 @@
     - role: galaxy/asciinema_server
     # /role-specific:asciinema_server
 
+    # role-specific:atuin
+    - role: galaxy/atuin
+    # /role-specific:atuin
+
     # role-specific:audiobookshelf
     - role: galaxy/audiobookshelf
     # /role-specific:audiobookshelf
