Add Atuin server (ansible-role-atuin) to files in templates/
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -32,6 +32,10 @@
   version: v20250915-0
   name: asciinema_server
   activation_prefix: asciinema_server_
+- src: https://codeberg.org/acioustick/ansible-role-atuin.git
+  version: v18.8.0-0
+  name: atuin
+  activation_prefix: atuin_
 - src: git+https://codeberg.org/acioustick/ansible-role-audiobookshelf.git
   version: v2.29.0-0
   name: audiobookshelf
