--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -64,6 +64,10 @@
   version: v5.9.0-0
   name: barassistant
   activation_prefix: barassistant_
+- src: git+https://github.com/mother-of-all-self-hosting/ansible-role-browserless.git
+  version: v2.37.1-0
+  name: browserless
+  activation_prefix: browserless_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-calibre-web.git
   version: v0.6.25-2
   name: calibre_web
