--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -153,6 +153,10 @@
     - role: galaxy/barassistant
     # /role-specific:barassistant
 
+    # role-specific:browserless
+    - role: galaxy/browserless
+    # /role-specific:browserless
+
     # role-specific:calibre_web
     - role: galaxy/calibre_web
     # /role-specific:calibre_web
