Add Karakeep (ansible-role-karakeep) to files in templates/
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -361,6 +361,10 @@
     - role: galaxy/joplin_server
     # /role-specific:joplin_server
 
+    # role-specific:karakeep
+    - role: galaxy/karakeep
+    # /role-specific:karakeep
+
     # role-specific:keycloak
     - role: galaxy/keycloak
     # /role-specific:keycloak
