--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -296,6 +296,10 @@
   version: v3.4.4-0
   name: joplin_server
   activation_prefix: joplin_server_
+- src: git+https://codeberg.org/acioustick/ansible-role-karakeep.git
+  version: v0.27.1-0
+  name: karakeep
+  activation_prefix: karakeep_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-keycloak.git
   version: v26.4.1-0
   name: keycloak
