Add noCDNbs (ansible-role-nocdnbs) to files in templates/
The role's repository has been pushed to the Radicle network for the role's durability and availability.

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -420,6 +420,10 @@
   version: v32-0
   name: nextcloud
   activation_prefix: nextcloud_
+- src: https://seed.radicle.garden/z8vyzN3a8DmwhcUq3949SihKd1Wh.git
+  version: v2025.10.0-0
+  name: nocdnbs
+  activation_prefix: nocdnbs_
 - src: git+https://codeberg.org/acioustick/ansible-role-nodebb.git
   version: v4.6.1-0
   name: nodebb
