Add FileBrowser Quantum (ansible-role-filebrowser-quantum) to files in templates/
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -241,6 +241,10 @@
     - role: galaxy/filebrowser
     # /role-specific:filebrowser
 
+    # role-specific:filebrowser_quantum
+    - role: galaxy/filebrowser_quantum
+    # /role-specific:filebrowser_quantum
+
     # role-specific:firezone
     - role: galaxy/firezone
     # /role-specific:firezone
