--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -176,6 +176,10 @@
   version: v2.44.1-0
   name: filebrowser
   activation_prefix: filebrowser_
+- src: git+https://seed.radicle.garden/z3ALGSKDhVLeMnR49YPXk5yv2yTge.git
+  version: v0.8.10-0
+  name: filebrowser_quantum
+  activation_prefix: filebrowser_quantum_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-firezone.git
   version: v0.7.36-6
   name: firezone
