--- a/inventory/host_vars/domain/vars.yml
+++ b/inventory/host_vars/domain/vars.yml
@@ -216,10 +216,6 @@ postgres_connection_password: "{{vault_devture_postgres_connection_password}}"
 
 nextcloud_enabled: true
 
-# This is your Nextcloud server's domain name.
-#
-# Example value: nextcloud.example.com
-
 nextcloud_hostname: "nextcloud.{{domain}}"
 nextcloud_path_prefix: /
 
@@ -232,6 +228,8 @@ nextcloud_app_collabora_wopi_url: "{{ collabora_online_url }}"
 
 # https://docs.nextcloud.com/server/stable/admin_manual/configuration_server/config_sample_php_parameters.html
 # https://github.com/mother-of-all-self-hosting/ansible-role-nextcloud/blob/main/defaults/main.yml
+
+nextcloud_preview_enabled: true
 
 nextcloud_environment_variables_additional_variables: |
   PHP_MEMORY_LIMIT=1024M
