--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -444,6 +444,10 @@
   version: v7.12.0-1
   name: oauth2_proxy
   activation_prefix: oauth2_proxy_
+- src: git+https://seed.radicle.garden/z3kozTn4Kn5eJtgJQj1aCFUpqxW5Y.git
+  version: v9.1.0-0
+  name: onlyoffice_docs
+  activation_prefix: onlyoffice_docs_
 - src: git+https://codeberg.org/acioustick/ansible-role-opengist.git
   version: v1.11.1-0
   name: opengist
