Add Wikimore (ansible-role-wikimore) to files in templates/
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -700,6 +700,10 @@
   version: v15.1.0-2
   name: wg_easy
   activation_prefix: wg_easy_
+- src: git+https://seed.radicle.garden/z54oV5qKRrLSArZqdisrD9s7h9BQ.git
+  version: v0.1.16-0
+  name: wikimore
+  activation_prefix: wikimore_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-woodpecker-ci-agent.git
   version: v3.11.0-0
   name: woodpecker_ci_agent
