--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -428,7 +428,7 @@
   version: v2025.10.0-0
   name: nocdnbs
   activation_prefix: nocdnbs_
-- src: git+https://codeberg.org/acioustick/ansible-role-nodebb.git
+- src: git+https://seed.radicle.garden/z2K9dPANyrXJY7juE9XecXyernA6h.git
   version: v4.6.1-0
   name: nodebb
   activation_prefix: nodebb_
