Migrate ansible-role-apprise to Radicle
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -20,8 +20,8 @@
   version: v3.8.0-10
   name: apisix_gateway
   activation_prefix: apisix_gateway_
-- src: git+https://codeberg.org/acioustick/ansible-role-apprise.git
-  version: v1.2.2-0
+- src: git+https://seed.radicle.garden/z292aD8q3r8xqhJvLe2zv1b24gu7a.git
+  version: v1.2.2-1
   name: apprise
   activation_prefix: apprise_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-appsmith.git
