--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -240,6 +240,10 @@
   version: v11.6.5-3
   name: grafana
   activation_prefix: grafana_
+- src: git+https://github.com/spatterIight/ansible-role-headplane.git
+  version: dev
+  name: headplane
+  activation_prefix: headplane_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-headscale.git
   version: v0.26.1-2
   name: headscale
