--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -445,7 +445,7 @@
   name: oauth2_proxy
   activation_prefix: oauth2_proxy_
 - src: git+https://seed.radicle.garden/z3kozTn4Kn5eJtgJQj1aCFUpqxW5Y.git
-  version: v9.1.0-0
+  version: v9.1.0-1
   name: onlyoffice_docs
   activation_prefix: onlyoffice_docs_
 - src: git+https://codeberg.org/acioustick/ansible-role-opengist.git
@@ -548,6 +548,10 @@
   version: v5.1.2-0
   name: qbittorrent
   activation_prefix: qbittorrent_
+- src: git+https://seed.radicle.garden/z3PCtuwyz2HdHeKnHCefR253rpYwp.git
+  version: v4.1.4-0
+  name: rabbitmq
+  activation_prefix: rabbitmq_
 - src: git+https://github.com/spatterIight/ansible-role-radarr.git
   version: v5.27.5-2
   name: radarr
