--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -28,7 +28,7 @@
   version: v1.73.1-1
   name: appsmith
   activation_prefix: appsmith_
-- src: git+https://codeberg.org/acioustick/ansible-role-asciinema-server.git
+- src: git+https://seed.radicle.garden/z8sG73WVo2TAKjoqh3vBvhfRqPsw.git
   version: v20251013-0
   name: asciinema_server
   activation_prefix: asciinema_server_
