Upgrade Pocket ID (v1.13.1-0 → v1.14.2-0)
- Migrate to Radicle

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -496,8 +496,8 @@
   version: v1.42.2-0
   name: plex
   activation_prefix: plex_
-- src: git+https://codeberg.org/acioustick/ansible-role-pocket-id.git
-  version: v1.13.1-0
+- src: git+https://seed.radicle.garden/z2vTmc3fLqxvpuT9EoZvkErWNZM1K.git
+  version: v1.14.2-0
   name: pocket_id
   activation_prefix: pocket_id_
 - src: git+https://seed.radicle.garden/z4MgJseWRZ9FL3Mh6ASufmi1RJoVh.git
