--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -32,7 +32,7 @@
   version: v20251013-1
   name: asciinema_server
   activation_prefix: asciinema_server_
-- src: git+https://codeberg.org/acioustick/ansible-role-atuin.git
+- src: git+https://seed.radicle.garden/z4ATDhf89CPqP7XCLNpNwobuJ9fBs.git
   version: v18.8.0-0
   name: atuin
   activation_prefix: atuin_
