Add Statusnook (ansible-role-statusnook) to files in templates/
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -677,6 +677,10 @@
     - role: galaxy/sonarr
     # /role-specific:sonarr
 
+    # role-specific:statusnook
+    - role: galaxy/statusnook
+    # /role-specific:statusnook
+
     # role-specific:stirling_pdf
     - role: galaxy/stirling_pdf
     # /role-specific:stirling_pdf
