--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -668,7 +668,7 @@
   version: v1.36.3-0
   name: telegraf
   activation_prefix: telegraf_
-- src: git+https://codeberg.org/acioustick/ansible-role-thelounge.git
+- src: git+https://seed.radicle.garden/z3vaa8VAuz3pxqB3FyciNKQRSHqyt.git
   version: v4.4.3-0
   name: thelounge
   activation_prefix: thelounge_
