--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -320,7 +320,7 @@
   version: v6.3.4-10
   name: keydb
   activation_prefix: keydb_
-- src: git+https://codeberg.org/acioustick/ansible-role-kutt.git
+- src: git+https://seed.radicle.garden/z36dPzLyvPA52m845g1MMqHgoiaEz.git
   version: v3.2.3-1
   name: kutt
   activation_prefix: kutt_
