--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -232,7 +232,7 @@
   version: v2025.3.9-2
   name: gothub
   activation_prefix: gothub_
-- src: git+https://codeberg.org/acioustick/ansible-role-gotify.git
+- src: git+https://seed.radicle.garden/z3dQNNLitS9sByxZ83ivu5qg6qR4N.git
   version: v2.7.3-1
   name: gotify
   activation_prefix: gotify_
