--- a/inventory/host_vars/domain/vars.yml
+++ b/inventory/host_vars/domain/vars.yml
@@ -229,19 +229,53 @@ nextcloud_app_collabora_wopi_url: "{{ collabora_online_url }}"
 # https://docs.nextcloud.com/server/stable/admin_manual/configuration_server/config_sample_php_parameters.html
 # https://github.com/mother-of-all-self-hosting/ansible-role-nextcloud/blob/main/defaults/main.yml
 
-nextcloud_preview_enabled: false
+nextcloud_preview_enabled: true
 
 nextcloud_environment_variables_additional_variables: |
   PHP_MEMORY_LIMIT=1024M
+  PHP_UPLOAD_LIMIT=2048M
+
+nextcloud_container_image_customizations_packages_to_install_custom:
+  - imagemagick
+  - libmagickcore-7.q16-10-extra
+  - php-imagick
+  - ghostscript
+  - libreoffice
+  - ffmpeg
+  - fonts-dejavu
+  - fonts-liberation
+  - fonts-noto-color-emoji
+  - libheif1
+  - librsvg2-bin
+  - ocrmypdf
+  - tesseract-ocr
+  - tesseract-ocr-eng
+  - hunspell-da
+
+nextcloud_container_image_customizations_dockerfile_body_custom: |
+  RUN set -eux; \
+      for P in /etc/ImageMagick-6/policy.xml /etc/ImageMagick/policy.xml; do \
+        if [ -f "$P" ]; then \
+          sed -ri 's/(<policy[^>]*domain="coder"[^>]*pattern="PDF"[^>]*rights=)"none"/\1"read"/' "$P" || true; \
+          sed -ri 's/(<policy[^>]*domain="coder"[^>]*pattern="PS"[^>]*rights=)"none"/\1"read"/'  "$P" || true; \
+          sed -ri 's/(<policy[^>]*domain="coder"[^>]*pattern="EPS"[^>]*rights=)"none"/\1"read"/' "$P" || true; \
+          sed -ri 's/(<policy[^>]*domain="coder"[^>]*pattern="XPS"[^>]*rights=)"none"/\1"read"/' "$P" || true; \
+        fi; \
+      done
+
+nextcloud_config_parameters_custom:
+  - key: enabledPreviewProviders
+    type: json
+    value: >
+      ["OC\\Preview\\PNG","OC\\Preview\\JPEG","OC\\Preview\\GIF","OC\\Preview\\BMP",
+       "OC\\Preview\\XBitmap","OC\\Preview\\WebP","OC\\Preview\\TIFF","OC\\Preview\\SVG",
+       "OC\\Preview\\HEIC","OC\\Preview\\PDF","OC\\Preview\\OpenDocument",
+       "OC\\Preview\\MSOffice2003","OC\\Preview\\MSOffice2007","OC\\Preview\\MSOffice",
+       "OC\\Preview\\TXT","OC\\Preview\\MarkDown","OC\\Preview\\Movie"]
 
 nextcloud_config_parameter_default_phone_region: DK
 nextcloud_config_parameter_default_timezone: Europe/Copenhagen
 nextcloud_config_parameter_maintenance_window_start: 3
-
-# nextcloud_config_parameters_custom:
-#   - key: mail_smtphost
-#     value: smtp.example.com
-#     type: string
 
 ### raw example values from the config - not to be used literally
 ###  'mail_smtpmode' => 'smtp',
