Add OpenRegex (ansible-role-openregex) to files in templates/
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -529,6 +529,10 @@
     - role: galaxy/opengist
     # /role-specific:opengist
 
+    # role-specific:openregex
+    - role: galaxy/openregex
+    # /role-specific:openregex
+
     # role-specific:outline
     - role: galaxy/outline
     # /role-specific:outline
