--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -464,6 +464,10 @@
   version: v1.11.1-1
   name: opengist
   activation_prefix: opengist_
+- src: git+https://seed.radicle.garden/z2kcNwMys48Wy3SLPnLU7oBnkkQyj.git
+  version: v1.3.0-0
+  name: openregex
+  activation_prefix: openregex_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-outline.git
   version: v1.0.1-0
   name: outline
