--- a/inventory/host_vars/domain/vars.yml
+++ b/inventory/host_vars/domain/vars.yml
@@ -219,66 +219,89 @@ nextcloud_enabled: true
 nextcloud_hostname: "nextcloud.{{domain}}"
 nextcloud_path_prefix: /
 
+# Collabora / WOPI integration
 nextcloud_app_collabora_wopi_url: "{{ collabora_online_url }}"
+# If Collabora is on the same host / Docker network, allow private ranges explicitly.
+# Adjust or trim as needed.
+nextcloud_app_collabora_wopi_allowlist: "127.0.0.1/8, 10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16"
 
-# By default, various private IPv4 networks are whitelited to connect to the WOPI API (document serving API).
-# If your Collabora Online installation does not live on the same server as Nextcloud,
-# you may need to adjust the list of networks.
-# If necessary, redefined the `nextcloud_collabora_app_wopi_allowlist` environment variable here.
-
-# https://docs.nextcloud.com/server/stable/admin_manual/configuration_server/config_sample_php_parameters.html
-# https://github.com/mother-of-all-self-hosting/ansible-role-nextcloud/blob/main/defaults/main.yml
-
+# Previews (enable and tune)
 nextcloud_preview_enabled: true
 
+# PHP/runtime knobs helpful for heavy preview/office conversions
 nextcloud_environment_variables_additional_variables: |
   PHP_MEMORY_LIMIT=1024M
   PHP_UPLOAD_LIMIT=2048M
+  PHP_MAX_EXECUTION_TIME=3600
 
+# Locale/region/time settings
+nextcloud_config_parameter_default_phone_region: DK
+nextcloud_config_parameter_default_timezone: Europe/Copenhagen
+nextcloud_config_parameter_maintenance_window_start: 3
+
+# Add tools required for high-coverage previews (PDF/Office/Video/HEIC/SVG) and for imagick build
 nextcloud_container_image_customizations_packages_to_install_custom:
+  - ca-certificates
+  - curl
   - imagemagick
   - libmagickcore-7.q16-10-extra
-  - libmagickwand-dev
   - ghostscript
-  - libreoffice
+  - poppler-utils
   - ffmpeg
+  - ffmpegthumbnailer
+  - libreoffice
   - fonts-dejavu
   - fonts-liberation
   - fonts-noto-color-emoji
+  - fontconfig
+  - gsfonts
   - libheif1
   - librsvg2-bin
+  - libimage-exiftool-perl
   - ocrmypdf
   - tesseract-ocr
   - tesseract-ocr-eng
+  - tesseract-ocr-dan
   - hunspell-da
 
-nextcloud_container_image_customizations_dockerfile_body_custom: |
-  RUN set -eux; \
-      for P in /etc/ImageMagick-6/policy.xml /etc/ImageMagick/policy.xml; do \
-        if [ -f "$P" ]; then \
-          sed -ri 's/(<policy[^>]*domain="coder"[^>]*pattern="PDF"[^>]*rights=)"none"/\1"read"/' "$P" || true; \
-          sed -ri 's/(<policy[^>]*domain="coder"[^>]*pattern="PS"[^>]*rights=)"none"/\1"read"/'  "$P" || true; \
-          sed -ri 's/(<policy[^>]*domain="coder"[^>]*pattern="EPS"[^>]*rights=)"none"/\1"read"/' "$P" || true; \
-          sed -ri 's/(<policy[^>]*domain="coder"[^>]*pattern="XPS"[^>]*rights=)"none"/\1"read"/' "$P" || true; \
-        fi; \
-      done
-  RUN set -eux; \
-      printf '\n' | pecl install imagick; \
-      docker-php-ext-enable imagick
+nextcloud_container_image_customizations_dockerfile_body_custom: ""
 
+# Nextcloud config.php parameters
 nextcloud_config_parameters_custom:
+  # Allow callbacks to RFC1918/localhost (useful for on-box Collabora and some apps)
+  - key: allow_local_remote_servers
+    type: "boolean"
+    value: true
+
+  # Keep/extend preview providers and add a few commonly useful ones
   - key: enabledPreviewProviders
-    type: json
+    type: "json"
     value: >
       ["OC\\Preview\\PNG","OC\\Preview\\JPEG","OC\\Preview\\GIF","OC\\Preview\\BMP",
        "OC\\Preview\\XBitmap","OC\\Preview\\WebP","OC\\Preview\\TIFF","OC\\Preview\\SVG",
        "OC\\Preview\\HEIC","OC\\Preview\\PDF","OC\\Preview\\OpenDocument",
        "OC\\Preview\\MSOffice2003","OC\\Preview\\MSOffice2007","OC\\Preview\\MSOffice",
-       "OC\\Preview\\TXT","OC\\Preview\\MarkDown","OC\\Preview\\Movie"]
+       "OC\\Preview\\TXT","OC\\Preview\\MarkDown","OC\\Preview\\Movie",
+       "OC\\Preview\\MP3","OC\\Preview\\Font","OC\\Preview\\Krita"]
 
-nextcloud_config_parameter_default_phone_region: DK
-nextcloud_config_parameter_default_timezone: Europe/Copenhagen
-nextcloud_config_parameter_maintenance_window_start: 3
+  # Preview sizing/quality (tune to taste)
+  - key: preview_max_x
+    type: "integer"
+    value: 4096
+  - key: preview_max_y
+    type: "integer"
+    value: 4096
+  - key: preview_max_filesize_image
+    type: "integer"
+    value: 100         # MB; images larger than this skip preview to avoid thrash
+  - key: jpeg_quality
+    type: "integer"
+    value: 80
+
+  # Give converters a stable temp dir (helps with large PDF/office conversions)
+  - key: tempdirectory
+    type: "string"
+    value: "/var/www/html/data/tmp"
 
 ### raw example values from the config - not to be used literally
 ###  'mail_smtpmode' => 'smtp',
