--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -561,6 +561,10 @@
     - role: galaxy/plausible
     # /role-specific:plausible
 
+    # role-specific:phpmyadmin
+    - role: galaxy/phpmyadmin
+    # /role-specific:phpmyadmin
+
     # role-specific:plex
     - role: galaxy/plex
     # /role-specific:plex
